--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 
 title: [Illuminating the Dark -- An In-Depth Analysis of Power Outage Data]
-description: [DSC 80 Final Project at the University of California San Diego by Zubin Sannakkayala and Atherv Vidhate]
+description: [By Zubin Sannakkayala and Atherv Vidhate]
 kramdown:
   input: GFM
   syntax_highlighter_opts:
